<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mf_login_background"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_35"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@mipmap/ic_login_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:padding="0dp">

                <EditText
                    android:id="@+id/et_username"
                    style="@style/mfh_edittext_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_login_account"
                    android:inputType="text|none"
                    android:minHeight="?android:attr/actionBarSize" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/mfh_edittext_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:minHeight="?android:attr/actionBarSize" />
            </LinearLayout>

            <Button
                android:id="@+id/button_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_corner_orange"
                android:minHeight="?android:attr/actionBarSize"
                android:text="@string/button_login_signin"
                android:gravity="center"
                android:textColor="@color/material_white"
                android:textSize="@dimen/textsize_normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:divider="@drawable/divider_vertical_line"
            android:dividerPadding="@dimen/spacing_normal"
            android:gravity="center_horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tv_retrievePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/button_login_retrieve_pwd"
                android:textColor="@color/white_60"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/button_login_signup"
                android:textColor="@color/white_60"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/animProgressBar"
        style="@style/loading"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:contentDescription="@null"
        android:src="@mipmap/mf_logo_small_white" />

</RelativeLayout>
