<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--上一单信息-->
    <LinearLayout
        android:id="@+id/frame_lastorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_lastorder"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_last_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="合计：¥0.00"
            android:textColor="@color/material_white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_last_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="数量：0.00"
            android:textColor="@color/material_white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_last_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="优惠：¥0.00"
            android:textColor="@color/material_white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_last_charge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="找零：¥0.00"
            android:textColor="@color/material_white"
            android:textSize="16sp"/>
    </LinearLayout>

    <!--数量和价格-->
    <LinearLayout
        android:id="@+id/frame_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_lastorder"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:baselineAligned="false"
        android:divider="@drawable/divider_vertical_line_primary"
        android:dividerPadding="12dp"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/default_amount"
                android:textColor="#009B4E"
                android:textSize="48sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_quantity"
                android:textColor="@color/black_70"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/default_amount_unit"
                android:textColor="#FE5000"
                android:textSize="48sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_amount"
                android:textColor="@color/black_70"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <!--输入条形码-->
    <com.mfh.litecashier.ui.widget.InputNumberLabelView
        android:id="@+id/inlv_barcode"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/frame_price"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        app:inputNumberLabelView_inputHint="@string/hint_product_barcode"
        app:inputNumberLabelView_inputTextColor="@color/black"
        app:inputNumberLabelView_inputTextColorHint="@color/black_35"
        app:inputNumberLabelView_rightImageButtonSrc="@mipmap/ic_search_del"/>

    <!--商品列表-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/horizontal_line"
        android:layout_below="@+id/inlv_barcode"
        android:padding="16dp">

        <include
            android:id="@+id/ll_procuct_header"
            layout="@layout/itemview_header_cashier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/ll_procuct_header"/>


        <TextView
            android:id="@+id/float_hangup"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_float_number"
            android:gravity="center"
            android:minWidth="80dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/material_white"
            android:textSize="20sp"
            android:visibility="gone"/>
        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_send"-->
        <!--android:src="@mipmap/ic_aircraft_white"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="12dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentBottom="true"/>-->

    </RelativeLayout>

    <!--分割线-->
    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/frame_bottom"
        android:background="@color/mf_dividerColorPrimary"/>

    <!--底部快捷菜单-->
    <LinearLayout
        android:id="@+id/frame_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/divider_vertical_line_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/button_hangup_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_rectange_gray"
            android:text="@string/button_hangup_order"
            android:textColor="@color/black_80"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_clear_order"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_rectange_gray"
            android:text="@string/button_clear_order"
            android:textColor="@color/black_80"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_money_box"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_rectange_gray"
            android:text="@string/button_money_box"
            android:textColor="@color/black_80"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_settle"
            style="@style/mfh_button_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/btn_rectange_green"
            android:text="@string/button_settle"/>
    </LinearLayout>

</RelativeLayout>