<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_pay_info"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <!--支付金额-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="收取金额"
                android:textColor="@color/black_70"
                android:textSize="18sp" />


            <com.mfh.litecashier.ui.widget.InputNumberLabelView
                android:id="@+id/inlv_paidmoney"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="32dp"
                app:inputNumberLabelView_inputHint="@string/hint_money"
                app:inputNumberLabelView_inputTextColor="@color/black"
                app:inputNumberLabelView_inputTextColorHint="@color/black_35"
                app:inputNumberLabelView_rightImageButtonSrc="@mipmap/ic_search_del" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:text="@string/label_pay_password"
                android:textColor="@color/black_70"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_barCode"
                style="@style/mfh_edittext_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/hint_pay_password"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pay_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:singleLine="true"
            android:text="0秒"
            android:textColor="#FE5000"
            android:textSize="64sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/animProgress"
                style="@style/loading"
                android:layout_width="30dip"
                android:layout_height="30dip" />

            <TextView
                android:id="@+id/tv_process"
                style="@style/mfh_textview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="正在发起支付请求"
                android:textColor="@color/black_60" />
        </LinearLayout>

        <Button
            android:id="@+id/button_cancel_ali_barpay"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/btn_rectange_green"
            android:text="取消订单"
            android:textColor="@color/material_white"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>
